# duel-log-app

./: .coverage  .devhive  .dockerignore  .env  .env.example  .env.preview.example  .env.production.example  .env.staging.example  .gitignore  .pre-commit-config.yaml  .releaserc.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  DEPLOYMENT_SETUP.md  Dockerfile  Dockerfile.cloudrun-api  MIGRATION_FIX_INSTRUCTIONS.md  README.ja.md  README.md  SUPABASE_OAUTH_SETUP.md  URGENT_FIX_STEPS.sh  VERCEL_SETUP_INSTRUCTIONS.md  biome.json  check_docker_state.sh  ci_log.txt  cleanup_and_restart.sh  docker-compose.agentmine.yml  docker-compose.override.yml.example  docker-compose.yml  docs-structure-comparison.md  get-supabase-credentials.sh  lighthouserc.json  mcp-git-here  migration_mapping.json  package-lock.json  package.json  pnpm-lock.yaml  render.yaml  requests.http  (+6 more)
.claude/: sources.md  (+3 more)
backend/: .dockerignore  .gitignore  CHECKLIST.md  CORS_FIX_QUICKSTART.md  Dockerfile  Dockerfile.bash  MIGRATION_ISSUES.md  README.md  README_REFACTORING.md  RENDER_CORS_SETUP.md  alembic.ini  conftest.py  pyproject.toml  requirements-dev.txt  requirements.txt  start.py  wait-for-db.sh
backend/alembic/: README  env.py
backend/app/: README.md  auth.py  main.py
backend/tests/: conftest.py  test_admin_api.py  test_auth_api.py  test_auth_priority.py  test_auth_utils.py  test_cache.py  test_csv_service.py  test_datetime_ranks.py  test_deck_api.py  test_deck_distribution_service.py  test_deck_service.py  test_duel_service.py  test_duels_api.py  test_general_stats_service.py  test_matchup_service.py  test_me_api.py  test_obs_statistics_api.py  test_quality_improvements.py  test_security.py  test_shared_statistics_api.py  test_statistics_api.py  test_statistics_available_decks.py  test_statistics_date_filter.py  test_statistics_service.py  test_supabase_auth.py  test_time_series_service.py  test_timezone_statistics.py  test_user_status.py  test_users_api.py  (+2 more)
(+761 files in other folders)
